--- a/Application.config
+++ b/Application.config
@@ -10,8 +10,8 @@
 		<SolutionSignAssembly>False</SolutionSignAssembly>
 		<AutoCreateResxFiles>False</AutoCreateResxFiles>
 		<AutoGenerateManifest>True</AutoGenerateManifest>		
-		<DebuggingWebApp>http://development:9841/</DebuggingWebApp>
-		<StartupUrl>http://development:9841/</StartupUrl>
+		<DebuggingWebApp>http://development</DebuggingWebApp>
+		<StartupUrl>http://development</StartupUrl>
 		<SPSFVersion>4.1.3.2705</SPSFVersion>
 	</PropertyGroup>
 	
