--- a/ClubCloud.Service/ISAPI/ClubCloud.Afhangen/web.config
+++ b/ClubCloud.Service/ISAPI/ClubCloud.Afhangen/web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="false" targetFramework="4.5">
     </compilation>
     <httpRuntime targetFramework="4.5" allowDynamicModuleRegistration="true" />
     <webServices>
@@ -33,19 +33,19 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="ClubCloudBinding" />
+        <binding name="ClubCloudBinding"  sendTimeout="00:10:00"/>        
       </basicHttpBinding>
       <wsDualHttpBinding>
-        <binding name="ClubCloudBinding" />
+        <binding name="ClubCloudBinding" sendTimeout="00:10:00"/>
       </wsDualHttpBinding>
       <wsHttpBinding>
-        <binding name="ClubCloudBinding" />
+        <binding name="ClubCloudBinding" sendTimeout="00:10:00"/>
       </wsHttpBinding>
       <mexHttpBinding>
-        <binding name="ClubCloudBinding" />
+        <binding name="ClubCloudBinding" sendTimeout="00:10:00"/>
       </mexHttpBinding>
       <webHttpBinding>
-        <binding name="ClubCloudBinding" >
+        <binding name="ClubCloudBinding" sendTimeout="00:10:00" >
           <security mode="Transport" >
             <transport clientCredentialType="None" />
           </security>
@@ -64,11 +64,14 @@
         <behavior name="showFaults">
           <serviceDebug includeExceptionDetailInFaults="true" />
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <dataContractSerializer ignoreExtensionDataObject="false" />
+          <useRequestHeadersForMetadataAddress />
         </behavior>
         <behavior name="ClubCloudAfhangen">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true" />
           <dataContractSerializer ignoreExtensionDataObject="false" />
+          <useRequestHeadersForMetadataAddress />
         </behavior>
       </serviceBehaviors>
     </behaviors>
