--- a/ClubCloud.Service/ISAPI/ClubCloud.Mobiel/web.config
+++ b/ClubCloud.Service/ISAPI/ClubCloud.Mobiel/web.config
@@ -29,6 +29,15 @@
         </verbs>
       </requestFiltering>
     </security>
+    <httpProtocol>
+      <customHeaders>
+          <add name="Access-Control-Allow-Origin" value="*" />
+          <add name="Access-Control-Allow-Methods" value="GET,POST,OPTIONS" />
+          <add name="Access-Control-Allow-Headers" value="origin, content-type, accept" />
+          <add name="Access-Control-Expose-Headers" value="Set-Cookie"/>
+          <add name="Access-Control-Allow-Credentials" value="true" />
+      </customHeaders>
+  </httpProtocol>
   </system.webServer>
   <system.serviceModel>
     <bindings>
@@ -73,7 +82,7 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="ClubCloudEndPoint">
-          <!--<enableWebScript /> -->
+          <!-- <enableWebScript />-->
           <dataContractSerializer ignoreExtensionDataObject="false" />
           <endpointDiscovery enabled="true" />
         </behavior>
@@ -83,13 +92,11 @@
           <serviceDebug includeExceptionDetailInFaults="true" />
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <dataContractSerializer ignoreExtensionDataObject="false" />
-          <useRequestHeadersForMetadataAddress />
         </behavior>
         <behavior name="ClubCloudMobiel">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true" />
           <dataContractSerializer ignoreExtensionDataObject="false" />
-          <useRequestHeadersForMetadataAddress />
         </behavior>
       </serviceBehaviors>
     </behaviors>
