--- a/ClubCloud.Service/ISAPI/ClubCloud.Service/web.config
+++ b/ClubCloud.Service/ISAPI/ClubCloud.Service/web.config
@@ -64,11 +64,14 @@
         <behavior name="showFaults">
           <serviceDebug includeExceptionDetailInFaults="true" />
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <dataContractSerializer ignoreExtensionDataObject="false" />
+          <useRequestHeadersForMetadataAddress />
         </behavior>
         <behavior name="ClubCloudService">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true" />
           <dataContractSerializer ignoreExtensionDataObject="false" />
+        <useRequestHeadersForMetadataAddress />
         </behavior>
       </serviceBehaviors>
     </behaviors>
