--- a/ClubCloud.Service/WebServices/ClubCloud.Service/web.config
+++ b/ClubCloud.Service/WebServices/ClubCloud.Service/web.config
@@ -34,7 +34,7 @@
     <bindings>
       <customBinding>
         <binding
-          name="ClubCloudBinding"  maxBufferPoolSize="1073741824" maxReceivedMessageSize="1073741824" >
+          name="ClubCloudBinding"  maxBufferPoolSize="1073741824" maxReceivedMessageSize="1073741824" sendTimeout="00:10:00" >
           <security
             authenticationMode="IssuedTokenOverTransport"
             allowInsecureTransport="true"  />
@@ -51,7 +51,7 @@
             transferMode="Streamed" />
         </binding>
         <binding
-          name="ClubCloudSecureBinding"  maxBufferPoolSize="1073741824" maxReceivedMessageSize="1073741824" >
+          name="ClubCloudSecureBinding"  maxBufferPoolSize="1073741824" maxReceivedMessageSize="1073741824" sendTimeout="00:10:00" >
           <security
             authenticationMode="IssuedTokenOverTransport" />
           <textMessageEncoding>
