--- a/ClubCloud.Service/ClubCloud.Service.csproj
+++ b/ClubCloud.Service/ClubCloud.Service.csproj
@@ -95,6 +95,7 @@
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Activation" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Extensions" />
