--- a/ClubCloud.Model/App.Config
+++ b/ClubCloud.Model/App.Config
@@ -1,8 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <connectionStrings>
-    <add name="BeheerContainer" connectionString="metadata=res://*/BeheerClubCloud.csdl|res://*/BeheerClubCloud.ssdl|res://*/BeheerClubCloud.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVELOPMENT\SHAREPOINT;initial catalog=ClubCloudService_Model_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-    <add name="BoekhoudingContainer" connectionString="metadata=res://*/BoekhoudingClubCloud.csdl|res://*/BoekhoudingClubCloud.ssdl|res://*/BoekhoudingClubCloud.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVELOPMENT\SHAREPOINT;initial catalog=ClubCloudService_Boekhouding_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-    <add name="SignalRContainer" connectionString="metadata=res://*/SignalRClubCloud.csdl|res://*/SignalRClubCloud.ssdl|res://*/SignalRClubCloud.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVELOPMENT\SHAREPOINT;initial catalog=ClubCloudService_SignalR_Model;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="BeheerContainer" connectionString="metadata=res://*/BeheerClubCloud.csdl|res://*/BeheerClubCloud.ssdl|res://*/BeheerClubCloud.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVELOPMENT\SHAREPOINT;initial catalog=ClubCloudService_Model_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BoekhoudingContainer" connectionString="metadata=res://*/BoekhoudingClubCloud.csdl|res://*/BoekhoudingClubCloud.ssdl|res://*/BoekhoudingClubCloud.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVELOPMENT\SHAREPOINT;initial catalog=ClubCloudService_Boekhouding_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SignalRContainer" connectionString="metadata=res://*/SignalRClubCloud.csdl|res://*/SignalRClubCloud.ssdl|res://*/SignalRClubCloud.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVELOPMENT\SHAREPOINT;initial catalog=ClubCloudService_SignalR_Model;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="StoreContainer" connectionString="metadata=res://*/StoreClubCloud.csdl|res://*/StoreClubCloud.ssdl|res://*/StoreClubCloud.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVELOPMENT\SHAREPOINT;initial catalog=ClubCloudService_Store_Model;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+  </startup>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+</configuration>
