--- a/ClubCloud.Service/ISAPI/ClubCloud.Afhangen/web.config
+++ b/ClubCloud.Service/ISAPI/ClubCloud.Afhangen/web.config
@@ -33,19 +33,30 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="ClubCloudBinding"  sendTimeout="00:10:00"/>        
+        <binding name="ClubCloudBinding"                 
+                 maxReceivedMessageSize="2147483647"
+                 maxBufferSize="2147483647"
+                 sendTimeout="00:10:00"/>
       </basicHttpBinding>
       <wsDualHttpBinding>
-        <binding name="ClubCloudBinding" sendTimeout="00:10:00"/>
+        <binding name="ClubCloudBinding" 
+                 maxReceivedMessageSize="2147483647"
+                 sendTimeout="00:10:00"/>
       </wsDualHttpBinding>
       <wsHttpBinding>
-        <binding name="ClubCloudBinding" sendTimeout="00:10:00"/>
+        <binding name="ClubCloudBinding"
+                 maxReceivedMessageSize="2147483647"
+                 sendTimeout="00:10:00"/>
       </wsHttpBinding>
       <mexHttpBinding>
-        <binding name="ClubCloudBinding" sendTimeout="00:10:00"/>
+        <binding name="ClubCloudBinding"
+                 sendTimeout="00:10:00"/>                 
       </mexHttpBinding>
       <webHttpBinding>
-        <binding name="ClubCloudBinding" sendTimeout="00:10:00" >
+        <binding name="ClubCloudBinding"
+                 maxReceivedMessageSize="2147483647"
+                 maxBufferSize="2147483647"
+                 sendTimeout="00:10:00">                 
           <security mode="Transport" >
             <transport clientCredentialType="None" />
           </security>
