--- a/ClubCloud.Service/WebClients/ClubCloud.Service/client.config
+++ b/ClubCloud.Service/WebClients/ClubCloud.Service/client.config
@@ -39,12 +39,12 @@
             allowInsecureTransport="true" />
           <textMessageEncoding>
             <readerQuotas
-              maxStringContentLength="1073741824"
-              maxArrayLength="1073741824"
-              maxBytesPerRead="1073741824" />
+              maxStringContentLength="2147483647"
+              maxArrayLength="2147483647"
+              maxBytesPerRead="2147483647" />
           </textMessageEncoding>          
           <httpTransport
-            maxReceivedMessageSize="2162688"
+            maxReceivedMessageSize="2147483647" maxBufferSize="2147483647"
             authenticationScheme="Anonymous"
             useDefaultWebProxy="false"
             transferMode="Streamed" />
@@ -57,12 +57,12 @@
             authenticationMode="IssuedTokenOverTransport" />
           <textMessageEncoding>
             <readerQuotas
-              maxStringContentLength="1073741824"
-              maxArrayLength="1073741824"
-              maxBytesPerRead="1073741824" />
+              maxStringContentLength="2147483647"
+              maxArrayLength="2147483647"
+              maxBytesPerRead="2147483647" />
           </textMessageEncoding>
           <httpsTransport
-            maxReceivedMessageSize="2162688"
+            maxReceivedMessageSize="2147483647" maxBufferSize="2147483647"
             authenticationScheme="Anonymous"
             useDefaultWebProxy="false"
             transferMode="Streamed" />
