--- a/ClubCloud.Service/ClubCloud.Service.csproj
+++ b/ClubCloud.Service/ClubCloud.Service.csproj
@@ -85,6 +85,7 @@
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IdentityModel" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Management" />
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -129,6 +130,20 @@
     </Compile>
     <Compile Include="ADMIN\ClubCloud.Service\ManageMetaData.aspx.designer.cs">
       <DependentUpon>ManageMetaData.aspx.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ADMIN\ClubCloud.Service\ManagePackage.aspx.cs">
+      <DependentUpon>ManagePackage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ADMIN\ClubCloud.Service\ManagePackage.aspx.designer.cs">
+      <DependentUpon>ManagePackage.aspx.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ADMIN\ClubCloud.Service\ManagePackages.aspx.cs">
+      <DependentUpon>ManagePackages.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ADMIN\ClubCloud.Service\ManagePackages.aspx.designer.cs">
+      <DependentUpon>ManagePackages.aspx.cs</DependentUpon>
     </Compile>
     <Compile Include="ADMIN\ClubCloud.Service\ManageUsers.aspx.cs">
       <DependentUpon>ManageUsers.aspx</DependentUpon>
@@ -209,6 +224,8 @@
     </None>
     <Content Include="ADMIN\ClubCloud.Service\CreateUser.aspx" />
     <Content Include="ADMIN\ClubCloud.Service\ManageMetaData.aspx" />
+    <Content Include="ADMIN\ClubCloud.Service\ManagePackage.aspx" />
+    <Content Include="ADMIN\ClubCloud.Service\ManagePackages.aspx" />
     <Content Include="ADMIN\ClubCloud.Service\ManageUsers.aspx" />
     <Content Include="ISAPI\ClubCloud.Mobiel\Mobiel.svc" />
     <Content Include="ISAPI\ClubCloud.Afhangen\Afhangen.svc" />
@@ -274,6 +291,11 @@
       <Project>{b259747c-7741-4b61-b261-24fbbe284f05}</Project>
       <Name>ClubCloud.Provider</Name>
       <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\ClubCloud.Store\ClubCloud.Store.csproj">
+      <Project>{b5da647e-5434-42f2-9c11-caf0e4c594a9}</Project>
+      <Name>ClubCloud.Store</Name>
+      <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\ClubCloud.Zimbra\ClubCloud.Zimbra.csproj">
       <Project>{04f1320b-7fd4-4429-985c-b3946ed2f519}</Project>
