--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\ClubCloud.Model\packages.config" />
   <repository path="..\ClubCloud.Service\packages.config" />
 </repositories>
