--- a/ClubCloud.Service/ISAPI/ClubCloud.Service/web.config
+++ b/ClubCloud.Service/ISAPI/ClubCloud.Service/web.config
@@ -66,7 +66,7 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="ClubCloudEndPoint">
-          <enableWebScript />
+          <!-- <enableWebScript /> -->
           <dataContractSerializer ignoreExtensionDataObject="false" />
           <endpointDiscovery enabled="true" />
         </behavior>
@@ -88,6 +88,7 @@
     </behaviors>
     <services>
       <service behaviorConfiguration="ClubCloudService" name="ClubCloud.Service.ClubCloudClientService">
+        <clear/>
         <endpoint address="script" behaviorConfiguration="ClubCloudEndPoint"
           binding="webHttpBinding" bindingConfiguration="ClubCloudBinding"
           name="ClubCloudScript" contract="ClubCloud.Service.IClubCloudClientService" />
