--- a/Application.config
+++ b/Application.config
@@ -6,7 +6,7 @@
 		<Company>Hemrika</Company>
 		<ApplicationVersion>1.0.0.0</ApplicationVersion>
 		<SharePointVersion>15</SharePointVersion>
-		<SolutionKeyFileName></SolutionKeyFileName>
+		<SolutionKeyFileName>ClubCloud.pfx</SolutionKeyFileName>
 		<SolutionSignAssembly>False</SolutionSignAssembly>
 		<AutoCreateResxFiles>False</AutoCreateResxFiles>
 		<AutoGenerateManifest>True</AutoGenerateManifest>		
