--- a/ClubCloud.Afhangen/ClubCloud.Afhangen.csproj
+++ b/ClubCloud.Afhangen/ClubCloud.Afhangen.csproj
@@ -60,14 +60,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Common\HtmlAgilityPack.dll</HintPath>
     </Reference>
-    <Reference Include="Syncfusion.EJ, Version=12.4451.0.24, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Common\Syncfusion.EJ.dll</HintPath>
-    </Reference>
-    <Reference Include="Syncfusion.EJ.Web, Version=12.4451.0.24, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Common\Syncfusion.EJ.Web.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.SharePoint.Security, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
