--- a/ClubCloud.Service/ISAPI/ClubCloud.Mobiel/web.config
+++ b/ClubCloud.Service/ISAPI/ClubCloud.Mobiel/web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2">
+    <compilation debug="false" targetFramework="4.5.2">
     </compilation>
     <httpRuntime targetFramework="4.5.2" allowDynamicModuleRegistration="true" />
     <webServices>
@@ -31,13 +31,13 @@
     </security>
     <httpProtocol>
       <customHeaders>
-          <add name="Access-Control-Allow-Origin" value="*" />
-          <add name="Access-Control-Allow-Methods" value="GET,POST,OPTIONS" />
-          <add name="Access-Control-Allow-Headers" value="origin, content-type, accept" />
-          <add name="Access-Control-Expose-Headers" value="Set-Cookie"/>
-          <add name="Access-Control-Allow-Credentials" value="true" />
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Methods" value="GET,POST,OPTIONS" />
+        <add name="Access-Control-Allow-Headers" value="origin, content-type, accept" />
+        <add name="Access-Control-Expose-Headers" value="Set-Cookie"/>
+        <add name="Access-Control-Allow-Credentials" value="true" />
       </customHeaders>
-  </httpProtocol>
+    </httpProtocol>
   </system.webServer>
   <system.serviceModel>
     <bindings>
@@ -45,7 +45,7 @@
         <binding name="ClubCloudBinding" >
           <security mode="TransportWithMessageCredential">
             <message clientCredentialType ="UserName" />
-            <transport clientCredentialType="InheritedFromHost" />            
+            <transport clientCredentialType="InheritedFromHost" />
           </security>
         </binding>
       </basicHttpBinding>
@@ -62,7 +62,7 @@
       </mexHttpBinding>
       <mexHttpsBinding>
         <binding name="ClubCloudBinding" />
-        </mexHttpsBinding>
+      </mexHttpsBinding>
       <webHttpBinding>
         <binding name="ClubCloudBinding">
           <security mode="TransportCredentialOnly">
