--- a/ClubCloud.Common/ClubCloud.Common.csproj
+++ b/ClubCloud.Common/ClubCloud.Common.csproj
@@ -20,6 +20,7 @@
     <SandboxedSolution>False</SandboxedSolution>
     <TargetFrameworkProfile />
     <IncludeAssemblyInPackage>True</IncludeAssemblyInPackage>
+    <ActiveDeploymentConfiguration>No Activation</ActiveDeploymentConfiguration>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
