--- a/ClubCloud.Internet/ClubCloud.Internet.csproj
+++ b/ClubCloud.Internet/ClubCloud.Internet.csproj
@@ -20,6 +20,7 @@
     <SandboxedSolution>False</SandboxedSolution>
     <IncludeAssemblyInPackage>True</IncludeAssemblyInPackage>
     <TargetFrameworkProfile />
+    <ActiveDeploymentConfiguration>No Activation</ActiveDeploymentConfiguration>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
