--- a/ClubCloud.Service/ISAPI/ClubCloud.Service/web.config
+++ b/ClubCloud.Service/ISAPI/ClubCloud.Service/web.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="false" targetFramework="4.5.2">
     </compilation>
-    <httpRuntime targetFramework="4.5" allowDynamicModuleRegistration="true" />
+    <httpRuntime targetFramework="4.5.2" allowDynamicModuleRegistration="true" />
     <webServices>
       <protocols>
         <remove name="HttpGet" />
