--- a/ClubCloud.Service/ISAPI/ClubCloud.Mobiel/web.config
+++ b/ClubCloud.Service/ISAPI/ClubCloud.Mobiel/web.config
@@ -44,7 +44,6 @@
       <basicHttpBinding>
         <binding name="ClubCloudBinding" >
           <security mode="TransportWithMessageCredential">
-            <message clientCredentialType ="UserName" />
             <transport clientCredentialType="InheritedFromHost" />
           </security>
         </binding>
@@ -52,7 +51,6 @@
       <wsHttpBinding>
         <binding name="ClubCloudBinding">
           <security mode="TransportWithMessageCredential">
-            <message clientCredentialType ="UserName" />
             <transport clientCredentialType="InheritedFromHost" />
           </security>
         </binding>
@@ -64,7 +62,7 @@
         <binding name="ClubCloudBinding" />
       </mexHttpsBinding>
       <webHttpBinding>
-        <binding name="ClubCloudBinding">
+        <binding name="ClubCloudBinding" >
           <security mode="TransportCredentialOnly">
             <transport clientCredentialType="InheritedFromHost" />
           </security>
@@ -73,7 +71,6 @@
       <basicHttpsBinding>
         <binding name="ClubCloudBinding" >
           <security mode="TransportWithMessageCredential">
-            <message clientCredentialType ="UserName" />
             <transport clientCredentialType="InheritedFromHost" />
           </security>
         </binding>
@@ -109,26 +106,19 @@
       </service>
     </services>
   </system.serviceModel>
-  <!--
   <runtime>
     <assemblyBinding>
-      <dependentAssembly xmlns="urn:schemas-microsoft-com:asm.v1">
-        <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
-      </dependentAssembly>
-      <dependentAssembly xmlns="urn:schemas-microsoft-com:asm.v1">
-        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
-      </dependentAssembly>
-      <dependentAssembly xmlns="urn:schemas-microsoft-com:asm.v1">
-        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
-      </dependentAssembly>
       <dependentAssembly xmlns="urn:schemas-microsoft-com:asm.v1">
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  -->
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="50000000"/>
+      </webServices>
+    </scripting>
+  </system.web.extensions>
 </configuration>
